7067973: test/java/lang/management/MemoryMXBean/CollectionUsageThreshold.java hanging intermittently
Reviewed-by: mchung